--- a/data-engineer.html
+++ b/data-engineer.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/creditkarma/e0393eaa-b5b7-4e08-961f-348633c9ddf5'>Credit Karma - Senior Data Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/fiscalnote/8eb2bd6f-76c8-40f8-a7e7-e3a9279df065'>FiscalNote - Director of Data Engineering</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-26</p>
@@ -52,11 +56,11 @@
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nike.referrals.selectminds.com/jobs/junior-data-engineer-50452'>Junior Data Engineer - NIKE, Inc. Careers</a></h5> 
+<h5><a href='https://nike.referrals.selectminds.com/jobs/junior-data-engineer-50452'>Junior Data Engineer - NIKE, Inc. Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MassiveInsights/743999682601628-data-engineer'>Massive Insights Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MassiveInsights/743999682601628-data-engineer'>Massive Insights Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -69,7 +73,7 @@
 <p>3 days ago ... Data Engineer, Mid. Key Role: Perform data engineering activities on some of the 
 coolest and most cutting-edge projects in the industry, working with Big Data?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bah.wd1.myworkdayjobs.com/en-US/BAH_Jobs/job/USA-VA-Herndon-575-Herndon-Pkwy/Big-Data-Engineer_R0039022-1'>Data Engineer, Mid | USA, VA, Herndon (575 Herndon Pkwy)</a></h5> 
+<h5><a href='https://bah.wd1.myworkdayjobs.com/en-US/BAH_Jobs/job/USA-VA-Herndon-575-Herndon-Pkwy/Big-Data-Engineer_R0039022-1'>Data Engineer, Mid | USA, VA, Herndon (575 Herndon Pkwy)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Data Engineer, Mid. Key Role: Design, implement, and manage databases and 
 data delivery systems and transform it into beautiful insights, analysis, and?...</p>
@@ -112,7 +116,7 @@ data delivery systems and transform it into beautiful insights, analysis, and?..
 online content network for information and online operations of CBS Corporation
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/pac-12-networks/job/oiOCafwC'>Pac-12 Networks Careers - Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/pac-12-networks/job/oiOCafwC'>Pac-12 Networks Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -240,7 +244,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Data Engineer at Monese.</p>
 <hr/>
-<h5><a href='https://keywords-intl1.workable.com/j/120579048C'>Keywords Studios - Jobs: Big Data Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://keywords-intl1.workable.com/j/120579048C'>Keywords Studios - Jobs: Big Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -271,7 +275,7 @@ broad disciplines from software, artificial intelligence/machine learning, elect
 <p>6 days ago ... The Getty is now hiring a Data Engineer in Los Angeles, California. Review all of 
 the job details and apply today!</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-goldmansachs.icims.com/jobs/52375/data-engineer-%28dio---edge%29---client-data-engineering/job'>Careers Center Data Engineer (DIO - Edge) - Client Data ...</a></h5> 
+<h5><a href='https://careers-goldmansachs.icims.com/jobs/52375/data-engineer-%28dio---edge%29---client-data-engineering/job'>Careers Center Data Engineer (DIO - Edge) - Client Data ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... 0839 095 Y478 0000|Technology Division|Core Engineering|Data Intelligence|
 Core Engineering is now hiring a Data Engineer (DIO - Edge) - Client Data?...</p>
@@ -290,11 +294,11 @@ Core Engineering is now hiring a Data Engineer (DIO - Edge) - Client Data?...</p
 machine learning and be part of transforming the way that we understand and 
 talk to?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/missionlane/jobs/4365462002'>Job Application for Data Engineer/ETL Developer at Mission Lane</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/missionlane/jobs/4365462002'>Job Application for Data Engineer/ETL Developer at Mission Lane</a></h5> 
 <p><span class="badge badge-light">Richmond</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vaynermedia/jobs/1532691'>Job Application for TRACER: Data Engineer at VaynerMedia LLC</a></h5> 
+<h5><a href='https://boards.greenhouse.io/vaynermedia/jobs/1532691'>Job Application for TRACER: Data Engineer at VaynerMedia LLC</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Tracer is a marketing data aggregation and reporting platform. Our technology 
 was born out of the challenges facing today's marketers. Incubated within?...</p>
@@ -316,7 +320,7 @@ was born out of the challenges facing today's marketers. Incubated within?...</p
 <p>1 day ago ... At Hulu, data is essential for all our decision-making needs whether it's related to 
 product design, measuring advertising effectiveness, helping users discover?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/intapp/job/ofMW9fwQ'>Intapp Careers - Senior Data Engineer/Lead</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/intapp/job/ofMW9fwQ'>Intapp Careers - Senior Data Engineer/Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>22 hours ago ... Description. Senior Data Engineer/Lead: Our culture favors doers, innovators and 
 disruptors. We are growing, we get things done, and we are always looking for?...</p>
@@ -360,7 +364,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mattermost/9acc3876-4e0f-40eb-ac23-cd79e1dcbf4c'>Mattermost - Data Engineer (Remote)</a></h5> 
+<h5><a href='https://jobs.lever.co/mattermost/9acc3876-4e0f-40eb-ac23-cd79e1dcbf4c'>Mattermost - Data Engineer (Remote)</a></h5> 
 <p><span class="badge badge-light">Arlington</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -441,7 +445,7 @@ working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/quizlet-2/ed729224-8655-41bb-9c41-35dad981ac76'>Quizlet - Senior Data Engineering Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/quizlet-2/ed729224-8655-41bb-9c41-35dad981ac76'>Quizlet - Senior Data Engineering Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Senior Data Engineering Manager. San Francisco, CA. Data Engineering ? Data 
 Engineering. Full-time. Apply for this job. Quizlet's mission is to help students?...</p>
@@ -471,10 +475,6 @@ TAL, Machine Learning, mod?lisation spatio-temporelle) qui seront mises en?...</
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... VIU EYEWEAR has a job opening for DATA ENGINEER (M/F/D) in Munich (
 published: 04.04.2019). Apply now or check the other available jobs.</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters83/743999692064495-big-data-engineer-python-graphql-google-cloud-100k-120k-full-benefits-401k-match-pto-career-growth-plus-more-'>IT Pros Big Data Engineer - Python/GraphQL/Google Cloud ($100K-$120K / Full Benefits / 401k Match / PTO / Career Growth / Plus More) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-20</p>
 <hr/>
 
 
